<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.app.topic.review.TopicReviewViewModel" />

  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oppiaBackground">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/review_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipToPadding="false"
      android:overScrollMode="never"
      android:paddingLeft="12dp"
      android:paddingTop="40dp"
      android:paddingRight="12dp"
      android:paddingBottom="@dimen/bottom_white_space"
      app:data="@{viewModel.subtopicLiveData}" />
  </FrameLayout>
</layout>
