...
            android:layout_marginEnd="28dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/oppiaPrimaryText"
            android:textSize="20sp" />

          <TextView
            android:id="@+id/review_card_explanation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="sans-serif"
...
