...
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="@dimen/revision_card_fragment_padding_bottom">

      <TextView
        android:id="@+id/revision_card_explanation_text"
        style="@style/Body"
        android:layout_marginStart="@dimen/revision_card_fragment_layout_margin_start"
        android:layout_marginTop="@dimen/revision_card_fragment_layout_text_margin_top"
        android:layout_marginEnd="@dimen/revision_card_fragment_layout_margin_end"
        android:minWidth="48dp"
        android:minHeight="48dp"
...
